--- a/About-us.html
+++ b/About-us.html
@@ -24,7 +24,7 @@
               <a href="/Offerings">What we do</a>
             </li>
             <li>
-              <a href="/about-us.html">Who we are</a>
+              <a href="about-us.html">Who we are</a>
             </li>
             <li>
               <a href="/Customers">Customers</a>
@@ -39,7 +39,7 @@
               <a href="/Latest" class="current">Latest</a>
             </li>
             <li>
-              <a href="/contact.html">Contact</a>
+              <a href="contact.html">Contact</a>
             </li>
             <li class="search">
               <input
@@ -57,7 +57,7 @@
         </nav>
       </header>
 
-      <content id="content">
+      <content >
         <h2>Our Story</h2>
         <p>
           Sed ut perspiciatis unde omnis iste natus error sit voluptatem
