--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
               <a href="/Offerings">What we do</a>
             </li>
             <li>
-              <a href="/about-us.html">Who we are</a>
+              <a href="about-us.html">Who we are</a>
             </li>
             <li>
               <a href="/Customers">Customers</a>
@@ -36,7 +36,7 @@
               <a href="/Latest" class="current">Latest</a>
             </li>
             <li>
-              <a href="/contact.html">Contact</a>
+              <a href="contact.html">Contact</a>
             </li>
             <li class="search">
               <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search titles" title="Type in title search term">
@@ -48,7 +48,7 @@
         </nav>
       </header>
 
-      <section id="content"></content>
+      <section></content>
 
       <footer>
         <!--Wather widget-->
