multiple cards created

--- a/contact.html
+++ b/contact.html
@@ -48,14 +48,30 @@
         </nav>
       </header>
 
-      <section >
+      <section class="team-section">
 
 <card class="card">
 <img src="/img/image (1).png" alt="a profile picture of a women">
 <h2 class="h2-special">Melissa Humble</h2>
-<p>CEO</p>
-
+<p >CEO</p>
 </card>
+
+<card class="card">
+  <img src="/img/image (2).png" alt="a profile picture of a women">
+  <h2 class="h2-special">Melissa Humble</h2>
+  <p>CEO</p>
+  </card>
+  <card class="card">
+    <img src="/img/image (1).png" alt="a profile picture of a women">
+    <h2 class="h2-special">Melissa Humble</h2>
+    <p>CEO</p>
+    </card>
+    <card class="card">
+      <img src="/img/image (2).png" alt="a profile picture of a women">
+      <h2 class="h2-special">Melissa Humble</h2>
+      <p>CEO</p>
+      </card>
+            
 
       </content>
 
