--- a/contact.html
+++ b/contact.html
@@ -52,24 +52,32 @@
 
 <card class="card">
 <img src="/img/image (1).png" alt="a profile picture of a women">
-<h2 class="h2-special">Melissa Humble</h2>
+<h2 > 
+  <b>Melissa Humble</b>
+ </h2>
 <p >CEO</p>
 </card>
 
 <card class="card">
   <img src="/img/image (2).png" alt="a profile picture of a women">
-  <h2 class="h2-special">Melissa Humble</h2>
-  <p>CEO</p>
+  <h2 > 
+    <b>Melissa Humble</b>
+   </h2>
+  <p >CEO</p>
   </card>
   <card class="card">
     <img src="/img/image (1).png" alt="a profile picture of a women">
-    <h2 class="h2-special">Melissa Humble</h2>
-    <p>CEO</p>
+    <h2 > 
+      <b>Melissa Humble</b>
+     </h2>
+    <p >CEO</p>
     </card>
     <card class="card">
       <img src="/img/image (2).png" alt="a profile picture of a women">
-      <h2 class="h2-special">Melissa Humble</h2>
-      <p>CEO</p>
+      <h2 > 
+        <b>Melissa Humble</b>
+       </h2>
+      <p >CEO</p>
       </card>
             
 
