--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,35 @@
        </h2>
       <p >CEO</p>
       </card>
-            
+      <card class="card">
+        <img src="/img/image (1).png" alt="a profile picture of a women">
+        <h2 > 
+          <b>Melissa Humble</b>
+         </h2>
+        <p >CEO</p>
+        </card>
+      <card class="card">
+        <img src="/img/image (2).png" alt="a profile picture of a women">
+        <h2 > 
+          <b>Melissa Humble</b>
+         </h2>
+        <p >CEO</p>
+        </card>
+        <card class="card">
+          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <h2 > 
+            <b>Melissa Humble</b>
+           </h2>
+          <p >CEO</p>
+          </card>
+          <card class="card">
+            <img src="/img/image (2).png" alt="a profile picture of a women">
+            <h2 > 
+              <b>Melissa Humble</b>
+             </h2>
+            <p >CEO</p>
+            </card>
+                  
 
       </content>
 
