--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         </nav>
       </header>
 
-      <section class="team-section">
+      <section class="team-section hejhej">
 
 <card class="card">
 <img src="/img/image (1).png" alt="a profile picture of a women">
