Auto stash before merge of "main" and "origin/main"

--- a/About-us.html
+++ b/About-us.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/reset.css" type="text/css" />
-    <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="./assets/css/sass/style.css" type="text/css" />
   </head>
   <body>
     <section role="main" id="wrapper">
@@ -56,6 +56,9 @@
           </ul>
         </nav>
       </header>
+      <section class="hero">
+        <img src="img/Header image.png">
+      </section>
 
       <content >
         <h2>Our Story</h2>
