--- a/About-us.html
+++ b/About-us.html
@@ -57,7 +57,7 @@
         </nav>
       </header>
 
-      <content id="content">
+      <content>
         <h2>Our Story</h2>
         <p>
           Sed ut perspiciatis unde omnis iste natus error sit voluptatem
@@ -65,6 +65,7 @@
           ab illo inventore veritatis et quasi architecto beatae vitae dicta
           sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
           aspernatur aut odit aut fugit.
+          <br />
           <br />
 
           Sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
@@ -76,6 +77,7 @@
           consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate
           velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum
           fugiat quo voluptas nulla pariatur?
+          <br />
           <br />
           At vero eos et accusamus et iusto odio dignissimos ducimus qui
           blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
