--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         </nav>
       </header>
 
-      <section id="content"></content>
+      <content ></content>
 
       <footer>
         <!--Wather widget-->
