--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 
   <div class="flex-item">
     </br>
-    
+    <a href="https://imgbb.com/"><img src="https://i.ibb.co/QMLDGNV/Social-media-icons.png" alt="Social-media-icons"></a>
   </div>
   </section>
 
