--- a/About-us.html
+++ b/About-us.html
@@ -58,6 +58,20 @@
       </header>
       <section class="hero">
         <img src="img/Header image.png">
+        <div class="herotext">
+          <div>
+            5000<br> People employed
+          </div>
+          <div>
+            1967<br> Year founded
+          </div>
+          <div>
+            50+<br> Countries with subscribers
+          </div>
+          <div>
+            100<br> News per day
+          </div>
+        </div>
       </section>
 
       <content >
