add class =our-story

--- a/About-us.html
+++ b/About-us.html
@@ -57,7 +57,7 @@
         </nav>
       </header>
 
-      <content>
+      <content class="our-story">
         <h2>Our Story</h2>
         <p>
           Sed ut perspiciatis unde omnis iste natus error sit voluptatem
