--- a/contact.html
+++ b/contact.html
@@ -1,161 +1,198 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Google News</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--Stylesheets-->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Playfair+Display:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/sass/reset.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/sass/style.css" type="text/css">
-  </head>
-  <body>
-    <section role="main" id="wrapper">
-      <!--Header-->
-      <header id="header" class="header">
-        <h1>Google News</h1>
-        <!--Menu-->
-        <nav id="menu" class="menu">
-          <ul>
-            <li>
-              <a href="/Offerings">What we do</a>
-            </li>
-            <li>
-              <a href="about-us.html">Who we are</a>
-            </li>
-            <li>
-              <a href="/Customers">Customers</a>
-            </li>
-            <li>
-              <a href="/Careers">Career</a>
-            </li>
-            <li>
-              <a href="/Investor-relations">IR</a>
-            </li>
-            <li>
-              <a href="/Latest" class="current">Latest</a>
-            </li>
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
-            <li class="search">
-              <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search titles" title="Type in title search term">
-            </li>
-            <li class="icon">
-              <a href="javascript:void(0);" onclick="menuFunction()">&#9776;</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
+
+<head>
+  <meta charset="utf-8">
+  <title>Google News</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--Stylesheets-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Playfair+Display:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/sass/reset.css" type="text/css">
+  <link rel="stylesheet" href="./assets/css/sass/style.css" type="text/css">
+</head>
+
+<body>
+  <section role="main" id="wrapper">
+    <!--Header-->
+    <header id="header" class="header">
+      <h1>Google News</h1>
+      <!--Menu-->
+      <nav id="menu" class="menu">
+        <ul>
+          <li>
+            <a href="/Offerings">What we do</a>
+          </li>
+          <li>
+            <a href="about-us.html">Who we are</a>
+          </li>
+          <li>
+            <a href="/Customers">Customers</a>
+          </li>
+          <li>
+            <a href="/Careers">Career</a>
+          </li>
+          <li>
+            <a href="/Investor-relations">IR</a>
+          </li>
+          <li>
+            <a href="/Latest" class="current">Latest</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+          <li class="search">
+            <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search titles"
+              title="Type in title search term">
+          </li>
+          <li class="icon">
+            <a href="javascript:void(0);" onclick="menuFunction()">&#9776;</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
 
 
 
-<section class="flex-container">
-  <div class="flex-item">
-    <h2 class="h2-special">General inquiries</h2>
-    </br>
-    <ul>
-      <li>info@googlenews.com</li>
-      <li>+846 795 85 96</li>
-    </ul>
-  </div>
+    <section class="flex-container">
+      <div class="flex-item">
+        <h2 class="h2-special">General inquiries</h2>
+        </br>
+        <ul>
+          <li>info@googlenews.com</li>
+          <li>+846 795 85 96</li>
+        </ul>
+      </div>
 
-  <div class="flex-item">
-    <h2 class="h2-special">New business</h2>
-    </br>
-    <ul>
-      <li>Melissa Humble</li>
-      <li>melissa.humble@googlenews.com</li>
-    </ul>
-  </div>
+      <div class="flex-item">
+        <h2 class="h2-special">New business</h2>
+        </br>
+        <ul>
+          <li>Melissa Humble</li>
+          <li>melissa.humble@googlenews.com</li>
+        </ul>
+      </div>
 
-  <div class="flex-item">
-    <h2 class="h2-special">Careers</h2>
-    </br>
-    <ul>
-      <li>job@googlenews.com</li>
-      <li>internship@googlenews.com</li>
-    </ul>
-  </div>
+      <div class="flex-item">
+        <h2 class="h2-special">Careers</h2>
+        </br>
+        <ul>
+          <li>job@googlenews.com</li>
+          <li>internship@googlenews.com</li>
+        </ul>
+      </div>
 
-  <div class="flex-item">
-    </br>
-    <a href="https://imgbb.com/"><img src="https://i.ibb.co/QMLDGNV/Social-media-icons.png" alt="Social-media-icons"></a>
-  </div>
-  </section>
+      <div class="flex-item">
+        </br>
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/QMLDGNV/Social-media-icons.png"
+            alt="Social-media-icons"></a>
+      </div>
+    </section>
 
-      <section class="team-section hejhej">
 
-<card class="card">
-<img src="/img/image (1).png" alt="a profile picture of a women">
-<h2 > 
-  <b>Melissa Humble</b>
- </h2>
-<p >CEO</p>
-</card>
-
-<card class="card">
-  <img src="/img/image (2).png" alt="a profile picture of a women">
-  <h2 > 
-    <b>Melissa Humble</b>
-   </h2>
-  <p >CEO</p>
-  </card>
-  <card class="card">
-    <img src="/img/image (1).png" alt="a profile picture of a women">
-    <h2 > 
-      <b>Melissa Humble</b>
-     </h2>
-    <p >CEO</p>
-    </card>
-    <card class="card">
-      <img src="/img/image (2).png" alt="a profile picture of a women">
-      <h2 > 
-        <b>Melissa Humble</b>
-       </h2>
-      <p >CEO</p>
-      </card>
-      <card class="card">
-        <img src="/img/image (1).png" alt="a profile picture of a women">
-        <h2 > 
-          <b>Melissa Humble</b>
-         </h2>
-        <p >CEO</p>
+    <section class="team-section">
+      <h3>Meet the team</h3>
+      <section class="card-section">
+        <card class="card">
+          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <h2>
+            <b>Melissa Humble</b>
+          </h2>
+          <p>CEO</p>
         </card>
-      <card class="card">
-        <img src="/img/image (2).png" alt="a profile picture of a women">
-        <h2 > 
-          <b>Melissa Humble</b>
-         </h2>
-        <p >CEO</p>
+        <card class="card">
+          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <h2>
+            <b>Melissa Humble</b>
+          </h2>
+          <p>CEO</p>
         </card>
         <card class="card">
           <img src="/img/image (1).png" alt="a profile picture of a women">
-          <h2 > 
+          <h2>
             <b>Melissa Humble</b>
-           </h2>
-          <p >CEO</p>
-          </card>
-          <card class="card">
-            <img src="/img/image (2).png" alt="a profile picture of a women">
-            <h2 > 
-              <b>Melissa Humble</b>
-             </h2>
-            <p >CEO</p>
-            </card>
-                  
-
-      </content>
-
-      <footer>
-        <!--Wather widget-->
-        <script> !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');</script>
-        <!--JS Scripts-->
-        <script type="text/javascript" src="./assets/js/menu.js"></script> <!--Mobile menu JS-->
-        <script type="text/javascript" src="./assets/js/request.js"></script> <!--JSON API request JS-->
-
-      </footer>
+          </h2>
+          <p>CEO</p>
+        </card>
+        <card class="card">
+          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <h2>
+            <b>Melissa Humble</b>
+          </h2>
+          <p>CEO</p>
+        </card>
+        <card class="card">
+          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <h2>
+            <b>Melissa Humble</b>
+          </h2>
+          <p>CEO</p>
+        </card>
+        <card class="card">
+          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <h2>
+            <b>Melissa Humble</b>
+          </h2>
+          <p>CEO</p>
+        </card>
+      </section>
+      <section class="card-section">
+        <card class="card">
+          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <h2>
+            <b>Melissa Humble</b>
+          </h2>
+          <p>CEO</p>
+        </card>
+        <card class="card">
+          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <h2>
+            <b>Melissa Humble</b>
+          </h2>
+          <p>CEO</p>
+        </card>
+        <card class="card">
+          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <h2>
+            <b>Melissa Humble</b>
+          </h2>
+          <p>CEO</p>
+        </card>
+        <card class="card">
+          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <h2>
+            <b>Melissa Humble</b>
+          </h2>
+          <p>CEO</p>
+        </card>
+        <card class="card">
+          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <h2>
+            <b>Melissa Humble</b>
+          </h2>
+          <p>CEO</p>
+        </card>
+        <card class="card">
+          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <h2>
+            <b>Melissa Humble</b>
+          </h2>
+          <p>CEO</p>
+        </card>
+      </section>
     </section>
-  </body>
+
+    </content>
+
+    <footer>
+      <!--Wather widget-->
+      <script> !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');</script>
+      <!--JS Scripts-->
+      <script type="text/javascript" src="./assets/js/menu.js"></script> <!--Mobile menu JS-->
+      <script type="text/javascript" src="./assets/js/request.js"></script> <!--JSON API request JS-->
+
+    </footer>
+  </section>
+</body>
+
 </html>
