about us team section
added cards, title and styles for team section

--- a/About-us.html
+++ b/About-us.html
@@ -113,6 +113,97 @@
         </p>
       </content>
 
+      <section class="team-section">
+        <h3>Meet the team</h3>
+        <section class="card-section">
+          <card class="card">
+            <img src="/img/image (1).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+          <card class="card">
+            <img src="/img/image (2).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+          <card class="card">
+            <img src="/img/image (1).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+          <card class="card">
+            <img src="/img/image (2).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+          <card class="card">
+            <img src="/img/image (1).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+          <card class="card">
+            <img src="/img/image (2).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+        </section>
+        <section class="card-section">
+          <card class="card">
+            <img src="/img/image (1).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+          <card class="card">
+            <img src="/img/image (2).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+          <card class="card">
+            <img src="/img/image (1).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+          <card class="card">
+            <img src="/img/image (2).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+          <card class="card">
+            <img src="/img/image (1).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+          <card class="card">
+            <img src="/img/image (2).png" alt="a profile picture of a women">
+            <h2>
+              <b>Melissa Humble</b>
+            </h2>
+            <p>CEO</p>
+          </card>
+        </section>
+      </section>
       <footer>
         <!--Wather widget-->
         <script>
