add transitions file for sass and add js file + js code in every html file

--- a/About-us.html
+++ b/About-us.html
@@ -223,6 +223,9 @@
         <!--Mobile menu JS-->
         <script type="text/javascript" src="./assets/js/request.js"></script>
         <!--JSON API request JS-->
+        <script type="text/javascript" src="./assets/js/fade.js"></script> 
+        <!--fade in and out page->
+          
       </footer>
     </section>
   </body>
