--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <!--JS Scripts-->
     <script type="text/javascript" src="./assets/js/menu.js"></script> <!--Mobile menu JS-->
     <script type="text/javascript" src="./assets/js/request.js"></script> <!--JSON API request JS-->
+    <script type="text/javascript" src="./assets/js/fade.js"></script> <!--fade in and out page->
 
   </body>
 </html>
