add line in all html file +change transitions color

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+  <div class="transition transition-1 is_active"></div>
   <section role="main" id="wrapper">
     <!--Header-->
     <header id="header" class="header">
