--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="./assets/css/sass/style.css" type="text/css">
   </head>
   <body>
+
+  
+    <div class="transition transition-1 is_active"></div>
     <div class="page-wrapper">
     <section role="main" id="wrapper">
       <!--Header-->
