--- a/About-us.html
+++ b/About-us.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./assets/css/sass/style.css" type="text/css" />
   </head>
   <body>
+
+  <div class="transition transition-1 is_active"></div>
     <section role="main" id="wrapper">
       <!--Header-->
       <header id="header" class="header">
