--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <!--Stylesheets-->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Playfair+Display:400,700" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/sass/reset.css" type="text/css">
-  <link rel="stylesheet" href="./assets/css/sass/style.css" type="text/css">
+  <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
 </head>
 
 <body>
@@ -188,37 +188,30 @@
 
     <footer class="flex-container">
       <div class="flex-item">
-        <h2 class="h2-special">About us</h2>
+        <h2 class="footer-heading">About us</h2>
         </br>
-        <ul>
-          <li>What we do</li>
-          <li>Who we are</li>
-        </ul>
+          <p>What we do</p>
+          <p>Who we are</p>
       </div>
   
       <div class="flex-item">
-        <h2 class="h2-special">About you</h2>
+        <h2 class="footer-heading">About you</h2>
         </br>
-        <ul>
-          <li>Customers</li>
-          <li>Latest</li>
-        </ul>
+          <p>Customers</p>
+          <p>Latest</p>
       </div>
   
       <div class="flex-item">
-        <h2 class="h2-special">Address</h2>
+        <h2 class="footer-heading">Address</h2>
         </br>
-        <ul>
-          <li>Google street 2,</li>
-          <li>526 42 Googleville</li>
-        </ul>
+          <p>Google street 2,</p>
+          <p>526 42 Googleville</p>
       </div>
   
       <div class="flex-item">
         <p>Copyright 2022 Google News</p>
       </div>
-  </div>
-</footer>
+    </footer>
     
       <!--Wather widget-->
       <script> !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');</script>
