--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,9 @@
       </nav>
     </header>
 
-
+    <section class="hero">
+      <img src="img/headercontact.png">
+    </section>
 
 
     <section class="flex-container">
@@ -137,8 +139,6 @@
           </h2>
           <p>CEO</p>
         </card>
-      </section>
-      <section class="card-section">
         <card class="card">
           <img src="/img/image (1).png" alt="a profile picture of a women">
           <h2>
