Made flex-start attribute

--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@
 
     </content>
 
-    <footer class="flex-container">
+    <footer class="flex-container flex-container-2">
       <div class="flex-item">
         <h2 class="special-heading">About us</h2>
         </br>
