--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <section id="content"></section>
 
-      <footer class="flex-container">
+      <footer class="flex-container-2">
         <div class="flex-item">
           <h2 class="special-heading">About us</h2>
           </br>
