--- a/About-us.html
+++ b/About-us.html
@@ -207,7 +207,7 @@
         </section>
       </section>
       
-      <footer class="flex-container">
+      <footer class="flex-container-2">
         <div class="flex-item">
           <h2 class="special-heading">About us</h2>
           </br>
