--- a/contact.html
+++ b/contact.html
@@ -98,84 +98,84 @@
       <h3>Meet the team</h3>
       <section class="card-section">
         <card class="card">
-          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <img src="img/image (1).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
           <p>CEO</p>
         </card>
         <card class="card">
-          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <img src="img/image (2).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
           <p>CEO</p>
         </card>
         <card class="card">
-          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <img src="img/image (1).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
           <p>CEO</p>
         </card>
         <card class="card">
-          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <img src="img/image (2).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
           <p>CEO</p>
         </card>
         <card class="card">
-          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <img src="img/image (1).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
           <p>CEO</p>
         </card>
         <card class="card">
-          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <img src="img/image (2).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
           <p>CEO</p>
         </card>
         <card class="card">
-          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <img src="img/image (1).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
           <p>CEO</p>
         </card>
         <card class="card">
-          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <img src="img/image (2).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
           <p>CEO</p>
         </card>
         <card class="card">
-          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <img src="img/image (1).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
           <p>CEO</p>
         </card>
         <card class="card">
-          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <img src="img/image (2).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
           <p>CEO</p>
         </card>
         <card class="card">
-          <img src="/img/image (1).png" alt="a profile picture of a women">
+          <img src="img/image (1).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
           <p>CEO</p>
         </card>
         <card class="card">
-          <img src="/img/image (2).png" alt="a profile picture of a women">
+          <img src="img/image (2).png" alt="a profile picture of a women">
           <h2>
             <b>Melissa Humble</b>
           </h2>
