--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <!--Stylesheets-->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Playfair+Display:400,700" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/sass/reset.css" type="text/css">
-  <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+  <link rel="stylesheet" href="./assets/css/sass/style.css" type="text/css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
             <a href="/Offerings">What we do</a>
           </li>
           <li>
-            <a href="about-us.html">Who we are</a>
+            <a href="/about-us.html">Who we are</a>
           </li>
           <li>
             <a href="/Customers">Customers</a>
@@ -40,11 +40,11 @@
             <a href="/Latest" class="current">Latest</a>
           </li>
           <li>
-            <a href="contact.html">Contact</a>
+            <a href="/contact.html">Contact</a>
           </li>
           <li class="search">
             <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search titles"
-              title="Type in title search term">
+              title="Type in title search term" />
           </li>
           <li class="icon">
             <a href="javascript:void(0);" onclick="menuFunction()">&#9776;</a>
@@ -69,27 +69,29 @@
       <div class="flex-item">
         <h2 class="special-heading">New business</h2>
         </br>
-          <p>Melissa Humble</p>
-          <p>melissa.humble@googlenews.com</p>
+        <p>Melissa Humble</p>
+        <p>melissa.humble@googlenews.com</p>
       </div>
 
       <div class="flex-item">
         <h2 class="special-heading">Careers</h2>
         </br>
-          <p>job@googlenews.com</p>
-          <p>internship@googlenews.com</p>
+        <p>job@googlenews.com</p>
+        <p>internship@googlenews.com</p>
       </div>
 
       <div class="flex-item">
         </br>
-        <img src="https://i.ibb.co/QMLDGNV/Social-media-icons.png"
-            alt="Social-media-icons">
+        <img src="https://i.ibb.co/QMLDGNV/Social-media-icons.png" alt="Social-media-icons">
       </div>
-    </div>
-    
-    <div class="google-map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.080605641032!2d7.481412473885781!3d8.964720189994175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0da12ccbe50f%3A0x2f6b055d46735dda!2sGoogle%20St%2C%20900110%2C%20Abuja%2C%20Federal%20Capital%20Territory%2C%20Nigeria!5e0!3m2!1ssv!2sse!4v1700499115551!5m2!1ssv!2sse" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+      </div>
+
+      <div class="google-map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.080605641032!2d7.481412473885781!3d8.964720189994175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0da12ccbe50f%3A0x2f6b055d46735dda!2sGoogle%20St%2C%20900110%2C%20Abuja%2C%20Federal%20Capital%20Territory%2C%20Nigeria!5e0!3m2!1ssv!2sse!4v1700499115551!5m2!1ssv!2sse"
+          width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
     </section>
 
     <section class="team-section">
@@ -188,35 +190,35 @@
       <div class="flex-item">
         <h2 class="special-heading">About us</h2>
         </br>
-          <p>What we do</p>
-          <p>Who we are</p>
+        <p>What we do</p>
+        <p>Who we are</p>
       </div>
-  
+
       <div class="flex-item">
         <h2 class="special-heading">About you</h2>
         </br>
-          <p>Customers</p>
-          <p>Latest</p>
+        <p>Customers</p>
+        <p>Latest</p>
       </div>
-  
+
       <div class="flex-item">
         <h2 class="special-heading">Address</h2>
         </br>
-          <p>Google street 2,</p>
-          <p>526 42 Googleville</p>
+        <p>Google street 2,</p>
+        <p>526 42 Googleville</p>
       </div>
-  
+
       <div class="flex-item">
         <p>Copyright 2022 Google News</p>
       </div>
     </footer>
-    
-      <!--Wather widget-->
-      <script> !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');</script>
-      <!--JS Scripts-->
-      <script type="text/javascript" src="./assets/js/menu.js"></script> <!--Mobile menu JS-->
-      <script type="text/javascript" src="./assets/js/request.js"></script> <!--JSON API request JS-->
-      <script type="text/javascript" src="./assets/js/fade.js"></script> <!--fade in and out page->
+
+    <!--Wather widget-->
+    <script> !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');</script>
+    <!--JS Scripts-->
+    <script type="text/javascript" src="./assets/js/menu.js"></script> <!--Mobile menu JS-->
+    <script type="text/javascript" src="./assets/js/request.js"></script> <!--JSON API request JS-->
+    <script type="text/javascript" src="./assets/js/fade.js"></script> <!--fade in and out page->
 
 </body>
 </html>
