--- a/About-us.html
+++ b/About-us.html
@@ -54,7 +54,7 @@
       </nav>
     </header>
     <section class="hero">
-      <img src="img/Header image.png">
+      <img src="img/Header image.png" alt="Man reading a newspaper.">
       <div class="herotext">
         <div>
           5000<br> People employed
@@ -200,21 +200,21 @@
     <footer class="flex-container-2">
       <div class="flex-item">
         <h2 class="special-heading">About us</h2>
-        </br>
+        <br>
         <p>What we do</p>
         <p>Who we are</p>
       </div>
 
       <div class="flex-item">
         <h2 class="special-heading">About you</h2>
-        </br>
+        <br>
         <p>Customers</p>
         <p>Latest</p>
       </div>
 
       <div class="flex-item">
         <h2 class="special-heading">Address</h2>
-        </br>
+        <br>
         <p>Google street 2,</p>
         <p>526 42 Googleville</p>
       </div>
