--- a/contact.html
+++ b/contact.html
@@ -54,39 +54,39 @@
     </header>
 
     <section class="hero">
-      <img src="img/headercontact.png">
+      <img src="img/headercontact.png" alt="Picture of a wooden office building.">
     </section>
 
 
     <article class="flex-container">
       <div class="flex-item">
         <h2 class="special-heading">General inquiries</h2>
-        </br>
+        <br>
         <p>info@googlenews.com</p>
         <p>+846 795 85 96</p>
       </div>
 
       <div class="flex-item">
         <h2 class="special-heading">New business</h2>
-        </br>
+        <br>
         <p>Melissa Humble</p>
         <p>melissa.humble@googlenews.com</p>
       </div>
 
       <div class="flex-item">
         <h2 class="special-heading">Careers</h2>
-        </br>
+        <br>
         <p>job@googlenews.com</p>
         <p>internship@googlenews.com</p>
       </div>
 
       <div class="flex-item">
-        </br>
+        <br>
         <img src="https://i.ibb.co/QMLDGNV/Social-media-icons.png" alt="Social-media-icons">
       </div>
     </article>
     
-    <div class="google-map">
+    <div class="map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.080605641032!2d7.481412473885781!3d8.964720189994175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0da12ccbe50f%3A0x2f6b055d46735dda!2sGoogle%20St%2C%20900110%2C%20Abuja%2C%20Federal%20Capital%20Territory%2C%20Nigeria!5e0!3m2!1ssv!2sse!4v1700499115551!5m2!1ssv!2sse" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
@@ -185,21 +185,21 @@
     <footer class="flex-container-2">
       <div class="flex-item">
         <h2 class="special-heading">About us</h2>
-        </br>
+        <br>
         <p>What we do</p>
         <p>Who we are</p>
       </div>
 
       <div class="flex-item">
         <h2 class="special-heading">About you</h2>
-        </br>
+        <br>
         <p>Customers</p>
         <p>Latest</p>
       </div>
 
       <div class="flex-item">
         <h2 class="special-heading">Address</h2>
-        </br>
+        <br>
         <p>Google street 2,</p>
         <p>526 42 Googleville</p>
       </div>
