--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,9 @@
       <img src="img/headercontact.png" alt="Picture of a wooden office building.">
     </section>
 
-
+    <div>
+    <h2 style=font-size:25px>Get in touch</h2>
+    </div>
     <article class="flex-container">
       <div class="flex-item">
         <h2 class="special-heading">General inquiries</h2>
