--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header id="header" class="header">
         <h1>Google News</h1>
         <!--Menu-->
-        <nav id="menu" class="menu">
+        <nav id="menu" class="menu no-nav">
           <ul>
             <li>
               <a href="/Offerings">What we do</a>
@@ -37,7 +37,7 @@
               <a href="/Investor-relations">IR</a>
             </li>
             <li>
-              <a href="/Latest" class="current">Latest</a>
+              <a href="/index.html" class="current">Latest</a>
             </li>
             <li>
               <a href="contact.html">Contact</a>
