--- a/contact.html
+++ b/contact.html
@@ -183,27 +183,28 @@
 
     </content>
 
-    <footer>
-      <!--Wather widget-->
-      <script> !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');</script>
-      <!--JS Scripts-->
-      <script type="text/javascript" src="./assets/js/menu.js"></script> <!--Mobile menu JS-->
-      <script type="text/javascript" src="./assets/js/fade.js"></script> <!--fade in and out page->
-
+    <footer class="flex-container-2">
+      <div class="flex-item">
+        <h2 class="special-heading">About us</h2>
+        <br>
+          <p>What we do</p>
+          <p>Who we are</p>
+      </div>
+  
       <div class="flex-item">
         <h2 class="special-heading">About you</h2>
         <br>
-        <p>Customers</p>
-        <p>Latest</p>
+          <p>Customers</p>
+          <p>Latest</p>
       </div>
-
+  
       <div class="flex-item">
         <h2 class="special-heading">Address</h2>
         <br>
-        <p>Google street 2,</p>
-        <p>526 42 Googleville</p>
+          <p>Google street 2,</p>
+          <p>526 42 Googleville</p>
       </div>
-
+  
       <div class="flex-item">
         <p>Copyright 2022 Google News</p>
       </div>
